More registry fixes and updates